--- a/package.json
+++ b/package.json
@@ -14,13 +14,10 @@
   "dependencies": {
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
-    "fontmin": "^2.0.0",
-    "nanoid": "^5.0.9",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^18.3.1",
-    "vite-imagetools": "^7.0.5",
-    "webpack-log": "^2.0.0"
+    "vite-imagetools": "^7.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
@@ -30,33 +27,18 @@
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^1.3.2",
     "critical": "^7.2.1",
-    "critters": "^0.0.23",
-    "critters-webpack-plugin": "^2.5.0",
-    "cssnano": "^7.0.6",
     "eslint": "^9.17.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "gh-pages": "^6.3.0",
-    "glob": "^11.0.1",
     "globals": "^15.14.0",
-    "html-minifier": "^4.0.0",
-    "html-minifier-terser": "^7.2.0",
-    "jsdom": "^26.0.0",
-    "penthouse": "^2.3.3",
     "postcss": "^8.5.1",
-    "postcss-critical-css": "^1.0.3",
-    "puppeteer": "^24.2.0",
-    "rimraf": "^6.0.1",
     "rollup": "^4.34.5",
     "rollup-plugin-visualizer": "^5.14.0",
-    "svgo": "^3.3.2",
-    "tough-cookie": "^5.1.0",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.23.0",
-    "uuid": "^11.0.5",
     "vite": "^6.1.0",
     "vite-plugin-compression": "^0.5.1",
-    "vite-plugin-html": "^3.2.2",
     "vite-plugin-minify": "^1.5.2"
   }
 }
