--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "homepage": "https://aitrendsnow.github.io/aitrends.now",
   "scripts": {
     "dev": "vite --host",
-    "build": "tsc -b && vite build && critical dist/index.html --base dist --inline --extract --css dist/assets/index-*.css --width 1440 --height 900 --target dist/index.html && node scripts/inject-preload.js",
+    "build": "tsc -b && vite build && critical dist/index.html --base dist --css assets/style-*.css --width 1440 --height 900 --target dist/index.html && node scripts/inject-preload.js",
     "lint": "eslint .",
     "preview": "vite preview",
     "deploy": "vite build && gh-pages -d dist"
@@ -24,6 +24,7 @@
   "devDependencies": {
     "@eslint/js": "^9.17.0",
     "@fullhuman/postcss-purgecss": "^7.0.2",
+    "@types/html-minifier-terser": "^7.0.2",
     "@types/node": "^22.13.1",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
@@ -41,7 +42,7 @@
     "rollup-plugin-visualizer": "^5.14.0",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.23.0",
-    "vite": "^6.1.0",
+    "vite": "^6.2.1",
     "vite-plugin-compression": "^0.5.1",
     "vite-plugin-minify": "^1.5.2"
   },
