--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "type": "module",
   "homepage": "https://aitrendsnow.github.io/aitrends.now",
   "scripts": {
-    "dev": "vite --host",
-    "build": "tsc -b && vite build && critical dist/index.html --base dist --css assets/style-*.css --width 1440 --height 900 --target dist/index.html && node scripts/inject-preload.js",
+    "dev": "tsc -b --watch & vite --host",
+   "build": "vite build && concurrently \"critical dist/index.html --base dist --css assets/style-*.css --width 1440 --height 900 --target dist/index.html\" \"node scripts/inject-preload.js\"",
     "lint": "eslint .",
     "preview": "vite preview",
     "deploy": "npm run build && gh-pages -d dist"
@@ -30,6 +30,7 @@
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^1.3.2",
     "autoprefixer": "^10.4.20",
+    "concurrently": "^9.1.2",
     "critical": "^7.2.1",
     "eslint": "^9.17.0",
     "eslint-plugin-react-hooks": "^5.0.0",
