--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "homepage": "https://aitrendsnow.github.io/aitrends.now",
   "scripts": {
     "dev": "tsc -b --watch & vite --host",
-   "build": "vite build && concurrently \"critical dist/index.html --base dist --css assets/style-*.css --width 1440 --height 900 --target dist/index.html\" \"node scripts/inject-preload.js\"",
+    "build": "vite build && concurrently \"critical dist/index.html --base dist --css assets/style-*.css --width 1440 --height 900 --target dist/index.html\" \"node scripts/inject-preload.js\"",
     "lint": "eslint .",
     "preview": "vite preview",
     "deploy": "npm run build && gh-pages -d dist"
@@ -45,6 +45,7 @@
     "typescript-eslint": "^8.23.0",
     "vite": "^6.2.1",
     "vite-plugin-compression": "^0.5.1",
+    "vite-plugin-html": "^3.2.2",
     "vite-plugin-minify": "^1.5.2"
   },
   "overrides": {
